# ness

./: .flake8  .gitignore  changelog.rst  pyproject.toml  readme.rst  requirements.dev.txt  requirements.txt
.circleci/: config.yml  requirements.txt
ness/: api.py  cli.py  graph.py  log.py  ness.py  parse.py
pyness/: arguments.py  cli.py  graph.py  log.py  ness.py  parse.py  types.py
tests/: run-style-checks.sh  run-type-checks.sh  test_api.py  test_graph.py  test_ness.py  test_parse.py
tests/data/: annotation-sample0.tsv  annotation-sample1.tsv  edge-sample0.tsv  edge-sample1.tsv  generic-sample0.tsv  geneset-sample0.tsv  geneset-sample1.tsv  homology-sample0.tsv  homology-sample1.tsv  ontology-sample0.tsv  ontology-sample1.tsv  sample-graph.tsv  seed-sample0.tsv  seed-sample1.tsv  seed-sample2.tsv
