[tool.poetry]
name = "ness"
version = "1.1.0"
description = "Heterogeneous, multi-species graph aggregation and analysis using random walks."
authors = ["TR <git@fin0c.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dask = "^2.9.0"
distributed = "^2.9.0"
fsspec = "^0.6.2"
networkx = "^2.4"
numpy = "^1.17.4"
pandas = "^0.25.3"
scipy = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.760"
pytest = "^5.3.2"

[tool.poetry.scripts]
ness = "ness.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
